# Game-Cheats-Manager

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  README_HK.md  README_TW.md  config.py  db_additions.py  elevator.cpp  gamecheats.py  helper.py  main.py  requirements.txt  style_sheet.py  wemod.py
Arrow a Row Trainer/: CMakeLists.txt  main.cpp  resources.rc  trainer.h  translations.json
DREDGE Trainer/: CMakeLists.txt  GCMInjection.csproj  main.cpp  trainer.h  translations.json
Game Trainers/: .gitignore  CMakeLists.txt
Game Trainers/common/: CMakeLists.txt
Game Trainers/common/include/: CDPBase.h  FLTKUtils.h  Il2CppBase.h  MonoBase.h  MonoBridge.cpp  MonoBridge.def  TrainerBase.h
Game Trainers/common/include/Aetherim/: class.hpp  type.hpp  wrapper.hpp
Game Trainers/common/include/FL/: Enumerations.H  Fl.H  Fl_Anim_GIF_Image.H  Fl_BMP_Image.H  Fl_Bitmap.H  Fl_Browser_.H  Fl_Button.H  Fl_Cairo_Window.H  Fl_Chart.H  Fl_Choice.H  Fl_Clock.H  Fl_Color_Chooser.H  Fl_Copy_Surface.H  Fl_Counter.H  Fl_Export.H  Fl_File_Chooser.H  Fl_File_Icon.H  Fl_Fill_Slider.H  Fl_FormsBitmap.H  Fl_Free.H  Fl_GIF_Image.H  Fl_Grid.H  Fl_Help_Dialog.H  Fl_Hor_Fill_Slider.H  Fl_Hor_Nice_Slider.H  Fl_Hor_Slider.H  Fl_Hor_Value_Slider.H  Fl_Image.H  Fl_Input.H  Fl_Input_.H  Fl_JPEG_Image.H  Fl_Line_Dial.H  Fl_Menu.H  Fl_Menu_Bar.H  Fl_Menu_Item.H  Fl_Menu_Window.H  Fl_Multi_Label.H  Fl_Multiline_Output.H  Fl_Nice_Slider.H  Fl_Output.H  (+47 more)
Game Trainers/common/include/il2cpp/: hook.h  il2cpp.cpp  il2cpp.h  il2cpp_api.h  il2cpp_types.h  memory.h  unity.cpp  unity.h  vec.h
Game Trainers/common/include/nlohmann/: adl_serializer.hpp
Game Trainers/common/libs/x64/: fltk_forms.lib  fltk_gl.lib  fltk_images.lib  fltk_png.lib  fltk_z.lib  libMinHook.x64.lib
Game Trainers/common/libs/x86/: fltk_gl.lib  fltk_png.lib  fltk_z.lib  libMinHook.x86.lib
Game Trainers/documents/: trainer_template.h
Game Trainers/scripts/: font_processor.py  gcm_trainers.json  requirements.txt
Game Trainers/trainers/Arrow a Row Trainer/: CMakeLists.txt  main.cpp
Game Trainers/trainers/DREDGE Trainer/: CMakeLists.txt  Directory.Build.props  GCMInjection.cs  GCMInjection.csproj  main.cpp  trainer.h  translations.json
Game Trainers/trainers/Dancing Line Trainer/: CMakeLists.txt  IL2CPP.cpp  main.cpp  mem_resolver.h  resources.rc  trainer.h  translations.json
Game Trainers/trainers/Feeding Frenzy 2_Shipwreck Showdown Trainer/: CMakeLists.txt  main.cpp  translations.json
Game Trainers/trainers/Headbangers_Rhythm Royale Trainer/: CMakeLists.txt  main.cpp  trainer.h  translations.json
Game Trainers/trainers/Heavy Weapon Trainer/: CMakeLists.txt  main.cpp
Game Trainers/trainers/Inotia 4 Trainer/: CMakeLists.txt  main.cpp  trainer.h  translations.json
Game Trainers/trainers/Just Shapes & Beats Trainer/: CMakeLists.txt  IL2CPP.cpp  main.cpp  resources.rc  trainer.h  translations.json
Game Trainers/trainers/Minishoot' Adventures Trainer/: CMakeLists.txt  Directory.Build.props  GCMInjection.cs  GCMInjection.csproj  main.cpp  resources.rc  trainer.h  translations.json
Game Trainers/trainers/Oil Rush Trainer/: CMakeLists.txt
Game Trainers/trainers/Outland Trainer/: CMakeLists.txt
Game Trainers/trainers/Plants vs. Zombies_GOTY Edition Trainer/: CMakeLists.txt  main.cpp  trainer.h  translations.json
Game Trainers/trainers/Plants vs. Zombies_Replanted Trainer/: CMakeLists.txt  IL2CPP.cpp  main.cpp  resources.rc  trainer.h  translation_extra.txt  translations.json
Game Trainers/trainers/PvZ2 Gardendless Trainer/: CMakeLists.txt  main.cpp  trainer.h  translations.json
Game Trainers/trainers/Wizard of Legend 2 Trainer/: CMakeLists.txt  main.cpp  trainer.h  translations.json
Game Trainers/trainers/Zao Meng Xi You_Wu Shuang Trainer/: CMakeLists.txt  main.cpp  resources.rc  trainer.h  translations.json
Headbangers_Rhythm Royale Trainer/: CMakeLists.txt  main.cpp  trainer.h
Plants vs. Zombies Trainer/: CMakeLists.txt  main.cpp  trainer.h  translations.json
common/: CMakeLists.txt
common/assets/: elevate.xml
common/include/: FLTKUtils.h  Il2CppBase.h  Il2CppBridge.cpp  Il2CppBridge.def  MonoBase.h  MonoBridge.cpp  MonoBridge.def  TrainerBase.h  imconfig.h
common/include/Aetherim/: api.hpp  field.hpp  image.hpp  method.hpp  table_defs.h
common/include/FL/: Enumerations.H  Fl.H  Fl_Adjuster.H  Fl_Box.H  Fl_Browser.H  Fl_Cairo.H  Fl_Check_Browser.H  Fl_Check_Button.H  Fl_Device.H  Fl_Dial.H  Fl_Double_Window.H  Fl_File_Browser.H  Fl_File_Chooser.H  Fl_File_Input.H  Fl_Fill_Dial.H  Fl_Flex.H  Fl_Float_Input.H  Fl_FormsPixmap.H  Fl_Gl_Window.H  Fl_Graphics_Driver.H  Fl_Grid.H  Fl_Group.H  Fl_Help_Dialog.H  Fl_Help_View.H  Fl_Hold_Browser.H  Fl_ICO_Image.H  Fl_Image_Surface.H  Fl_Input_Choice.H  Fl_Int_Input.H  Fl_Light_Button.H  Fl_Menu_.H  Fl_Menu_Button.H  Fl_Multi_Browser.H  Fl_Multiline_Input.H  Fl_Native_File_Chooser.H  Fl_Object.H  Fl_Overlay_Window.H  Fl_PDF_File_Surface.H  Fl_PNG_Image.H  Fl_Plugin.H  (+45 more)
common/include/nlohmann/: byte_container_with_subtype.hpp  json.hpp  json_fwd.hpp  ordered_map.hpp
common/include/nlohmann/detail/: abi_macros.hpp  json_custom_base_class.hpp  json_pointer.hpp  json_ref.hpp  macro_unscope.hpp  string_escape.hpp
common/libs/: fltk.lib  fltk_forms.lib  fltk_forms_x86.lib  fltk_gl.lib  fltk_gl_x86.lib  fltk_images.lib  fltk_images_x86.lib  fltk_jpeg.lib  fltk_jpeg_x64.lib  fltk_jpeg_x86.lib  fltk_png.lib  fltk_png_x86.lib  fltk_x86.lib  fltk_z.lib  fltk_z_x86.lib
common/libs/x64/: fltk_forms.lib  fltk_gl.lib  fltk_images.lib  fltk_jpeg.lib  fltk_png.lib  fltk_z.lib
common/libs/x86/: fltk.lib  fltk_forms.lib  fltk_gl.lib  fltk_images.lib  fltk_jpeg.lib  fltk_png.lib  fltk_z.lib
common/src/: imgui_draw.cpp
trainers/Arrow a Row Trainer/: CMakeLists.txt  main.cpp  trainer.h  translations.json
trainers/DREDGE Trainer/: CMakeLists.txt  GCMInjection.cs  GCMInjection.csproj  main.cpp  resources.rc  trainer.h  translation_extra.txt  translations.json
trainers/Headbangers_Rhythm Royale Trainer/: CMakeLists.txt  main.cpp  resources.rc  translations.json
(+129 files in other folders)
